<resources>
    <string name="app_name">Tip Time</string>
    <string name="cost_of_service_edit_text">Cost of Service</string>
    <string name="how_was_the_service_text_view">How was the service</string>
    <string name="amazing_radio_button">Amazing (20%)</string>
    <string name="good_radio_button">Good (18%)</string>
    <string name="ok_radio_button">OK (15%)</string>
    <string name="round_up_tip_switch">Round up tip</string>
    <string name="calculate_button">Calculate</string>
    <string name="tip_amount_text_view">Tip Amount: SAR %s</string>
</resources>